[gd_scene load_steps=3 format=3 uid="uid://dx0rauyvc10ql"]

[ext_resource type="Script" uid="uid://dwo32e00qsmab" path="res://objetos/ActSistemas/Cajas/caja_1Script.gd" id="1_nav0s"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xho3y"]
size = Vector2(182, 44)

[node name="Caja1" type="Node2D"]
script = ExtResource("1_nav0s")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(92, 22)
shape = SubResource("RectangleShape2D_xho3y")

[node name="Label" type="Label" parent="."]
z_index = 2
offset_right = 92.0
offset_bottom = 49.0
theme_override_colors/font_color = Color(0.473976, 0.473976, 0.473976, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
text = "HOLA HOLA
"

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
